// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components > Analysis > Title should render properly given different states 1`] = `
<div
  className="ApplicationDockTitle"
>
  <Icon
    type="area-chart"
  />
   
  Analysis
  <Button
    className="pull-right"
    disabled={false}
    onClick={[MockFunction]}
    style="primary"
    title=""
  >
    <Icon
      type="refresh"
    />
     
    Fetch results
  </Button>
  <Button
    className="pad-right pull-right"
    disabled={false}
    onClick={[MockFunction]}
    style="success"
    title=""
  >
    <Icon
      type="plus"
    />
    New regional analysis
  </Button>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 2`] = `
<div
  className="ApplicationDockTitle"
>
  <Icon
    type="area-chart"
  />
   
  Analysis
  <Button
    className="pull-right"
    disabled={false}
    onClick={[MockFunction]}
    style="primary"
    title=""
  >
    <Icon
      type="refresh"
    />
     
    Fetch results
  </Button>
  <Button
    className="pad-right pull-right"
    disabled={true}
    onClick={[MockFunction]}
    style="success"
    title="Fetch results for a single point before running a regional analysis"
  >
    <Icon
      type="plus"
    />
    New regional analysis
  </Button>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 3`] = `
<div
  className="ApplicationDockTitle"
>
  <Icon
    type="area-chart"
  />
   
  Analysis
  <Button
    className="pull-right"
    disabled={true}
    onClick={[MockFunction]}
    style="primary"
    title="Select a project before fetching results"
  >
    <Icon
      type="refresh"
    />
     
    Fetch results
  </Button>
  <Button
    className="pad-right pull-right"
    disabled={false}
    onClick={[MockFunction]}
    style="success"
    title=""
  >
    <Icon
      type="plus"
    />
    New regional analysis
  </Button>
</div>
`;

exports[`Components > Analysis > Title should render properly given different states 4`] = `
<div
  className="ApplicationDockTitle"
>
  <Icon
    type="area-chart"
  />
   
  Loading opportunity dataset…
  <Button
    className="pull-right"
    onClick={[MockFunction]}
    style="danger"
  >
    <Icon
      type="close"
    />
     Abort
  </Button>
</div>
`;
